Include link to slides

--- a/index.html
+++ b/index.html
@@ -617,6 +617,7 @@ this.addEventListener('fetch', function(event) {
 
 <br>
     <div>
+        Slides: <a href="http://fhinkel.github.io/DevCampMuc">http://fhinkel.github.io/DevCampMuc</a>
         <!--img style="height: 200px" src="img/test/FranziskaHinkelmann.jpg" -->
     </div>
     <p style="text-align:center">
